--- a/changelog.txt
+++ b/changelog.txt
@@ -2,7 +2,10 @@ version 0.08:
 * "frame rate" edit control now supports arbitrary positive decimal ("12.3456") and fractional ("60000/1001") framerates
 * "BASS/FMOD interception" added. BASS interception removes the need for the fairlight hack, FMOD interception fixes FMODs
   broken timing code to make demos run at a higher framerate than 43fps.
+* separate encoder thread option (makes everything much faster on multicore systems, but the code isn't very well tested)
 * ddraw capture fix: now also grad frames on primary buffer unlock (fixes voidspace/woorlic, fall equals winter/replay)
+* post a dummy WM_NULL message to foreground window every frame (fix for some old hjb intros)
+* new startup interception fix: treat calls in startup code differently ("dead cells" now works) 
 
 version 0.07:
 * "frame timed out" now mentions *which* frame was skipped (if you want to check whether the video is fine or if it causes problems)
