--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,4 @@
+* redid startup interception yet again: now using simple DLL injection via CreateRemoteThread. should work fine with .NET executables and be less flaky in general.
 * sound: lock entire directsound buffer when dwBytes=0 (fix for "mother mother, my ears bleed")
 
 version 1.01:
